--- a/index.html
+++ b/index.html
@@ -2,368 +2,319 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>LEGION LIVE</title>
+<title>Legion Live</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<!-- =================== ROMAN LEGION THEME =================== -->
 <style>
-* { box-sizing: border-box; }
+/* ===============================
+   GLOBAL THEME
+   =============================== */
 
 :root {
-  --bg: #070707;
-  --panel: #111111;
-  --border: #3a2a14;
-  --primary: #7b0d0d;
-  --accent: #b08d57;
-  --text: #e8e3d9;
-  --muted: #8a8a8a;
+  --bg-main: #0b0d10;
+  --bg-panel: #12151b;
+  --bg-panel-soft: #161a21;
+  --border-muted: #2a2f3a;
+  --accent-bronze: #b08d57;
+  --accent-bronze-soft: #7d6642;
+  --text-main: #e6e6e6;
+  --text-muted: #9aa0ab;
+  --danger: #8b1e1e;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  background: radial-gradient(circle at top, #0f0f0f, var(--bg));
-  color: var(--text);
-  font-family: system-ui, sans-serif;
+  background: radial-gradient(1200px at top, #141821, #07080b);
+  color: var(--text-main);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
 }
 
-/* =================== HEADER =================== */
+/* ===============================
+   HEADER
+   =============================== */
+
 header {
-  padding: 20px;
-  text-align: center;
-  font-size: 1.8rem;
-  font-weight: 900;
-  letter-spacing: 0.18em;
-  text-transform: uppercase;
-  color: var(--accent);
-  background: linear-gradient(to bottom, #140b0b, #050505);
-  border-bottom: 3px solid var(--border);
-}
-
-/* Subtle Legion Insignia */
-header::after {
-  content: "⚔";
-  display: block;
-  font-size: 1.2rem;
-  margin-top: 6px;
-  opacity: 0.6;
-}
-
-/* =================== NAV =================== */
-nav {
-  display: flex;
-  justify-content: center;
-  gap: 12px;
-  padding: 12px;
-  background: #0b0b0b;
-  border-bottom: 1px solid var(--border);
-}
-
-nav button {
-  background: transparent;
-  color: var(--text);
-  border: 1px solid var(--border);
-  padding: 8px 16px;
-  border-radius: 6px;
-  font-weight: 700;
-  letter-spacing: 0.08em;
-  text-transform: uppercase;
-}
-
-nav button:hover {
-  background: var(--primary);
-  border-color: var(--accent);
-}
-
-/* =================== LAYOUT =================== */
-main {
-  max-width: 1100px;
-  margin: auto;
-  padding: 18px;
-}
-
-.card {
-  background: linear-gradient(145deg, #121212, #0b0b0b);
-  border: 1px solid var(--border);
-  border-radius: 14px;
-  padding: 20px;
-  margin-bottom: 20px;
-  box-shadow: inset 0 0 0 1px rgba(176,141,87,0.05);
-}
-
-/* Roman Standard Divider */
-.divider {
   display: flex;
   align-items: center;
-  margin: 18px 0;
-  opacity: 0.8;
+  justify-content: space-between;
+  padding: 18px 28px;
+  border-bottom: 1px solid var(--border-muted);
+  background: linear-gradient(to bottom, #0e1118, #0a0c11);
 }
 
-.divider::before,
-.divider::after {
-  content: "";
-  flex: 1;
-  height: 1px;
-  background: var(--border);
-}
-
-.divider span {
-  margin: 0 12px;
-  color: var(--accent);
+header h1 {
+  margin: 0;
+  font-size: 20px;
+  letter-spacing: 3px;
   font-weight: 700;
-  letter-spacing: 0.15em;
 }
 
-/* =================== TEXT =================== */
+header span {
+  color: var(--accent-bronze);
+  font-weight: 600;
+}
+
+/* ===============================
+   LAYOUT
+   =============================== */
+
+main {
+  display: flex;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 24px;
+  gap: 24px;
+}
+
+aside {
+  width: 260px;
+  background: var(--bg-panel);
+  border: 1px solid var(--border-muted);
+  padding: 16px;
+}
+
+section {
+  flex: 1;
+  background: var(--bg-panel);
+  border: 1px solid var(--border-muted);
+  padding: 24px;
+}
+
+/* ===============================
+   NAV
+   =============================== */
+
+.nav-btn {
+  display: block;
+  width: 100%;
+  padding: 12px 14px;
+  margin-bottom: 8px;
+  background: none;
+  border: 1px solid transparent;
+  color: var(--text-muted);
+  text-align: left;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.nav-btn.active {
+  background: var(--bg-panel-soft);
+  border-color: var(--accent-bronze-soft);
+  color: var(--text-main);
+}
+
+.nav-btn:hover {
+  color: var(--text-main);
+}
+
+/* ===============================
+   PROFILE PANEL
+   =============================== */
+
 h2 {
   margin-top: 0;
-  color: var(--accent);
-  letter-spacing: 0.12em;
-  text-transform: uppercase;
+  margin-bottom: 16px;
+  font-size: 18px;
+  font-weight: 600;
 }
 
-.small {
-  color: var(--muted);
-  font-size: 0.85rem;
+.divider {
+  height: 1px;
+  background: linear-gradient(
+    to right,
+    transparent,
+    var(--accent-bronze-soft),
+    transparent
+  );
+  margin: 16px 0;
 }
 
-/* =================== INPUTS =================== */
-input, textarea {
+label {
+  display: block;
+  margin-top: 16px;
+  margin-bottom: 6px;
+  font-size: 13px;
+  color: var(--text-muted);
+}
+
+input,
+textarea {
   width: 100%;
-  background: #050505;
-  border: 1px solid var(--border);
-  color: var(--text);
   padding: 10px;
-  border-radius: 6px;
-  margin-bottom: 12px;
+  background: #0b0e14;
+  border: 1px solid var(--border-muted);
+  color: var(--text-main);
+  resize: vertical;
 }
 
-/* =================== BUTTONS =================== */
+textarea {
+  min-height: 90px;
+}
+
 button.primary {
-  background: linear-gradient(to bottom, #8f1414, var(--primary));
-  border: 1px solid var(--accent);
+  margin-top: 20px;
+  width: 100%;
   padding: 12px;
-  color: #fff;
-  border-radius: 6px;
-  font-weight: 800;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
+  background: linear-gradient(to bottom, #b08d57, #8a6b3f);
+  border: none;
+  color: #000;
+  font-weight: 600;
+  cursor: pointer;
 }
 
 button.primary:hover {
-  filter: brightness(1.1);
+  filter: brightness(1.05);
 }
 
-/* =================== VIDEO =================== */
-video {
-  width: 100%;
-  border-radius: 10px;
-  border: 2px solid var(--border);
-  background: #000;
+.status {
+  margin-top: 12px;
+  font-size: 13px;
 }
 
-/* =================== WARNINGS =================== */
-.warning {
-  background: linear-gradient(to bottom, #2a0a0a, #1a0505);
-  border: 1px solid var(--primary);
-  padding: 14px;
-  border-radius: 10px;
-  color: #ffb3b3;
-  font-weight: 700;
-}
+/* ===============================
+   RANK BADGE
+   =============================== */
 
-/* =================== RANK BADGES =================== */
-.rank {
+.rank-badge {
   display: inline-block;
-  padding: 4px 10px;
-  border-radius: 999px;
-  font-size: 0.75rem;
-  font-weight: 800;
-  letter-spacing: 0.08em;
-  text-transform: uppercase;
-  border: 1px solid var(--border);
+  padding: 6px 10px;
+  border: 1px solid var(--accent-bronze-soft);
+  color: var(--accent-bronze);
+  font-size: 12px;
+  margin-top: 8px;
 }
 
-.rank.viewer { background: #222; }
-.rank.legionnaire { background: #4a0f0f; color: #fff; }
-.rank.centurion { background: #7b0d0d; border-color: var(--accent); }
-.rank.tribune { background: #b08d57; color: #000; }
+/* ===============================
+   FOOTER
+   =============================== */
 
-/* =================== TRIBUNAL PANEL =================== */
-.tribunal {
-  background: linear-gradient(145deg, #1a1212, #0c0808);
-  border: 2px solid var(--accent);
+footer {
+  text-align: center;
+  padding: 18px;
+  color: var(--text-muted);
+  font-size: 12px;
+  border-top: 1px solid var(--border-muted);
 }
 
-.tribunal h2 {
-  color: #ffcccc;
+/* ===============================
+   RESPONSIVE
+   =============================== */
+
+@media (max-width: 900px) {
+  main {
+    flex-direction: column;
+  }
+
+  aside {
+    width: 100%;
+  }
 }
 </style>
 </head>
 
 <body>
 
-<header>LEGION • LIVE</header>
+<header>
+  <h1>LEGION <span>LIVE</span></h1>
+  <div class="rank-badge">LEGIONNAIRE</div>
+</header>
 
-<nav>
-  <button onclick="route('home')">Home</button>
-  <button onclick="route('login')">Login</button>
-  <button onclick="route('profile')">Profile</button>
-  <button onclick="route('stream')">Go Live</button>
-  <button onclick="route('admin')">Tribunal</button>
-</nav>
+<main>
 
-<main id="app"></main>
+  <aside>
+    <button class="nav-btn active">Profile</button>
+    <button class="nav-btn" disabled>Go Live (Soon)</button>
+    <button class="nav-btn" disabled>Feed (Soon)</button>
+    <button class="nav-btn" disabled>Tribunal (Admin)</button>
+  </aside>
+
+  <section>
+    <h2>Legion Record</h2>
+    <p style="color:var(--text-muted);font-size:14px;">
+      Your public record within the Legion.
+    </p>
+
+    <div class="divider"></div>
+
+    <label>Username</label>
+    <input id="username" placeholder="legionnaire_name" />
+
+    <label>About You</label>
+    <textarea id="about" placeholder="Background, oath, or public description"></textarea>
+
+    <button class="primary" onclick="saveProfile()">Save Record</button>
+
+    <div id="status" class="status"></div>
+  </section>
+
+</main>
+
+<footer>
+  Legion Live · North America · Europe · Japan
+</footer>
 
 <script>
-// ================= CONFIG =================
-const API_BASE = "https://legion-live-backend.onrender.com";
+const API = "https://legion-live-backend-1.onrender.com";
 
-// ================= STATE ==================
-const app = document.getElementById("app");
-const state = {
-  user: JSON.parse(localStorage.getItem("legion_user")) || null,
-  ageVerified: localStorage.getItem("age_verified") === "yes"
-};
+async function saveProfile() {
+  const username = document.getElementById("username").value.trim();
+  const about = document.getElementById("about").value.trim();
+  const status = document.getElementById("status");
 
-function saveUser() {
-  localStorage.setItem("legion_user", JSON.stringify(state.user));
-}
-
-// ================= ROUTER =================
-function route(page) {
-  if (page === "home") renderHome();
-  if (page === "login") renderLogin();
-  if (page === "profile") renderProfile();
-  if (page === "stream") renderStream();
-  if (page === "admin") renderAdmin();
-}
-
-// ================= SCREENS =================
-function renderHome() {
-  app.innerHTML = `
-    <div class="card">
-      <h2>Legion Protocol</h2>
-      <div class="divider"><span>⚔</span></div>
-      ${!state.ageVerified ? `
-        <div class="warning">
-          Tribunal Decree: 21+ Only
-          <br><br>
-          <button class="primary" onclick="verifyAge()">I Am 21+</button>
-        </div>` :
-        `<p class="small">Age verified by decree ✔</p>`}
-    </div>`;
-}
-
-function verifyAge() {
-  state.ageVerified = true;
-  localStorage.setItem("age_verified", "yes");
-  renderHome();
-}
-
-function renderLogin() {
-  app.innerHTML = `
-    <div class="card">
-      <h2>Enter the Legion</h2>
-      <div class="divider"><span>STANDARD</span></div>
-      <input placeholder="Email" id="email" />
-      <button class="primary" onclick="login()">Proceed</button>
-    </div>`;
-}
-
-async function login() {
-  if (!state.ageVerified) {
-    alert("Tribunal requires 21+ verification.");
+  if (!username) {
+    status.style.color = "#c33";
+    status.textContent = "Username is required.";
     return;
   }
 
-  const email = document.getElementById("email").value;
-
-  const res = await fetch(API_BASE + "/auth/login", {
-    method: "POST",
-    headers: {
-      "Content-Type": "application/json",
-      "x-region": "NA"
-    },
-    body: JSON.stringify({ email, ageVerified: true })
-  });
-
-  const data = await res.json();
-
-  if (data.token) {
-    state.user = {
-      email,
-      token: data.token,
-      name: email.split("@")[0],
-      rank: "legionnaire"
-    };
-    saveUser();
-    route("profile");
-  } else {
-    alert(data.error || "Denied by tribunal.");
-  }
-}
-
-function renderProfile() {
-  if (!state.user) return route("login");
-
-  app.innerHTML = `
-    <div class="card">
-      <h2>Legionnaire Record</h2>
-      <span class="rank ${state.user.rank}">${state.user.rank}</span>
-      <div class="divider"><span>INSIGNIA</span></div>
-      <input value="${state.user.name}" onchange="updateName(this.value)" />
-      <textarea placeholder="Oath / About Me"></textarea>
-    </div>`;
-}
-
-function updateName(v) {
-  state.user.name = v;
-  saveUser();
-}
-
-let mediaStream = null;
-
-function renderStream() {
-  app.innerHTML = `
-    <div class="card">
-      <h2>Broadcast Standard</h2>
-      <video id="video" autoplay muted></video>
-      <div class="divider"><span>LIVE</span></div>
-      <button class="primary" onclick="startStream()">Raise Standard</button>
-      <button onclick="stopStream()">Lower Standard</button>
-    </div>`;
-}
-
-async function startStream() {
   try {
-    mediaStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
-    document.getElementById("video").srcObject = mediaStream;
-  } catch {
-    alert("Tribunal denied camera or microphone.");
+    await fetch(`${API}/auth/login`, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ username })
+    });
+
+    await fetch(`${API}/me`, {
+      method: "PUT",
+      headers: {
+        "Content-Type": "application/json",
+        "Authorization": username
+      },
+      body: JSON.stringify({ about_me: about })
+    });
+
+    localStorage.setItem("legion_user", username);
+
+    status.style.color = "#4caf50";
+    status.textContent = "Profile saved.";
+  } catch (err) {
+    status.style.color = "#c33";
+    status.textContent = "Error saving profile.";
   }
 }
 
-function stopStream() {
-  if (mediaStream) {
-    mediaStream.getTracks().forEach(t => t.stop());
-  }
+async function loadProfile() {
+  const username = localStorage.getItem("legion_user");
+  if (!username) return;
+
+  document.getElementById("username").value = username;
+
+  try {
+    const res = await fetch(`${API}/me`, {
+      headers: { "Authorization": username }
+    });
+
+    if (!res.ok) return;
+    const data = await res.json();
+    document.getElementById("about").value = data.about_me || "";
+  } catch {}
 }
 
-/* ================= TRIBUNAL (ADMIN UI) ================= */
-function renderAdmin() {
-  app.innerHTML = `
-    <div class="card tribunal">
-      <h2>Tribunal Chamber</h2>
-      <div class="divider"><span>JUDGMENT</span></div>
-      <p class="small">
-        Administrative oversight, stream termination, and enforcement actions.
-        (UI only — logic enforced server-side.)
-      </p>
-      <button class="primary">Terminate Stream</button>
-    </div>`;
-}
-
-route("home");
+loadProfile();
 </script>
 
 </body>
